size modifiers, button groups and focus styles added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Not another button component</title>
 
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/not-another-button-component.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -20,19 +22,85 @@
 
     <h1>Not another button component</h1>
 
+    <h2>Base</h2>
+
     <a href="#" class="btn" role="button">Default Button</a>
-
     <a href="#" class="btn btn-primary" role="button">Primary Button</a>
-
     <a href="#" class="btn btn-secondary" role="button">Secondary Button</a>
-
     <a href="#" class="btn btn-outline" role="button">Outline Button</a>
-
     <a href="#" class="btn btn-success" role="button">Success Button</a>
-
     <a href="#" class="btn btn-warning" role="button">Warning Button</a>
-
     <a href="#" class="btn btn-error" role="button">Error Button</a>
+
+    <h2>Size</h2>
+
+    <a href="#" class="btn btn-primary small" role="button">Small Button</a>
+    <a href="#" class="btn btn-primary" role="button">Medium Button</a>
+    <a href="#" class="btn btn-primary large" role="button">Large Button</a>
+
+
+	<h2>Disable</h2>
+
+	<a href="#" class="btn disabled">Default</a>
+	<a href="#" class="btn btn-primary disabled" role="button">Primary</a>
+	<a href="#" class="btn btn-secondary disabled" role="button">Secondary</a>
+	<a href="#" class="btn btn-outline disabled" role="button">Outline</a>
+	<a href="#" class="btn btn-success disabled" role="button">Success</a>
+	<a href="#" class="btn btn-warning disabled" role="button">Warning</a>
+	<a href="#" class="btn btn-error disabled" role="button">Error</a>
+
+
+    <h2>Buttons with text and icon</h2>
+
+    <a href="#" class="btn"><i class="fas fa-search"></i> Search</a>
+    <a href="#" class="btn"><i class="fas fa-inbox"></i> Inbox</a>
+    <a href="#" class="btn"><i class="fas fa-globe"></i> Language</a>
+    <a href="#" class="btn"><i class="fas fa-download"></i> Download</a>
+    <a href="#" class="btn"><i class="fas fa-question-circle"></i> Help</a>
+
+    <h3>Buttons icon only</h3>
+
+    <a href="#" class="btn"><i class="fas fa-search"></i></a>
+    <a href="#" class="btn"><i class="fas fa-inbox"></i></a>
+    <a href="#" class="btn"><i class="fas fa-globe"></i></a>
+    <a href="#" class="btn"><i class="fas fa-download"></i></a>
+    <a href="#" class="btn"><i class="fas fa-question-circle"></i></a>
+
+
+
+    <h2>Horizontal button group</h2>
+
+    <div class="btn-group btn-group-horizontal">
+        <a href="#" class="btn">Cut</a>
+        <a href="#" class="btn btn-outline">Copy</a>
+        <a href="#" class="btn btn-outline">Paste</a>
+        <a href="#" class="btn btn-outline">Delete</a>
+    </div>
+
+    <h3>Horizontal button group icons only</h3>
+
+    <div class="btn-group btn-group-horizontal">
+        <a href="#" class="btn"><i class="fas fa-cut"></i></a>
+        <a href="#" class="btn btn-outline"><i class="fas fa-copy"></i></a>
+        <a href="#" class="btn btn-outline"><i class="fas fa-paste"></i></a>
+        <a href="#" class="btn btn-outline"><i class="fas fa-trash-alt"></i></a>
+    </div>
+
+    <h2>Vertical button group</h2>
+
+    <div class="btn-group btn-group-vertical">
+        <a href="#" class="btn">Pounds</a>
+        <a href="#" class="btn btn-outline">Euro</a>
+        <a href="#" class="btn btn-outline">Dollars</a>
+    </div>
+
+    <h3>Vertical button group icons only</h3>
+    
+    <div class="btn-group btn-group-vertical">
+        <a href="#" class="btn"><i class="fas fa-pound-sign"></i></a>
+        <a href="#" class="btn btn-outline"><i class="fas fa-euro-sign"></i></a>
+        <a href="#" class="btn btn-outline"><i class="fas fa-dollar-sign"></i></a>
+    </div>
 
     </div>
 </body>
