--- a/example.html
+++ b/example.html
@@ -42,12 +42,12 @@
 	<h2>Disable</h2>
 
 	<a href="#" class="btn disabled">Default</a>
-	<a href="#" class="btn btn-primary disabled" role="button">Primary</a>
-	<a href="#" class="btn btn-secondary disabled" role="button">Secondary</a>
-	<a href="#" class="btn btn-outline disabled" role="button">Outline</a>
-	<a href="#" class="btn btn-success disabled" role="button">Success</a>
-	<a href="#" class="btn btn-warning disabled" role="button">Warning</a>
-	<a href="#" class="btn btn-error disabled" role="button">Error</a>
+	<a href="#" class="btn btn-primary disabled" role="button" aria-disabled="true">Primary</a>
+	<a href="#" class="btn btn-secondary disabled" role="button" aria-disabled="true">Secondary</a>
+	<a href="#" class="btn btn-outline disabled" role="button" aria-disabled="true">Outline</a>
+	<a href="#" class="btn btn-success disabled" role="button" aria-disabled="true">Success</a>
+	<a href="#" class="btn btn-warning disabled" role="button" aria-disabled="true">Warning</a>
+	<a href="#" class="btn btn-error disabled" role="button" aria-disabled="true">Error</a>
 
 
     <h2>Buttons with text and icon</h2>
