set border width to 1px on button and updated file structure

--- a/example.html
+++ b/example.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Not another button component</title>
 
-    <link rel="stylesheet" href="dist/base.css">
-    <link rel="stylesheet" href="dist/mono/not-another-button-component.css">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="dist/not-another-button-component.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
