border radius modifier added

--- a/example.html
+++ b/example.html
@@ -67,6 +67,13 @@
     <a href="#" class="btn"><i class="fas fa-question-circle"></i></a>
 
 
+    <h2>Radius</h2>
+
+    <a href="#" class="btn btn-primary radius-none" role="button">No Radius</a>
+    <a href="#" class="btn btn-primary radius-small" role="button">Small Radius</a>
+    <a href="#" class="btn btn-primary" role="button">Medium Radius</a>
+    <a href="#" class="btn btn-primary radius-large" role="button">Large Button</a>
+    <a href="#" class="btn btn-primary radius-circle" role="button"><i class="fa-solid fa-pen"></i></a>
 
     <h2>Horizontal button group</h2>
 
